--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webpack Website</title>
+  <title>Webpack Example</title>
 </head>
 <body>
   <div id="app"></div>
-  <script src="bundle.js"></script>
 </body>
 </html>
