--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webpack App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Parcel App</title>
 </head>
 <body>
-  <div id="app"></div>
-  <script src="bundle.js"></script> <!-- Make sure this points to your output JS file -->
+    <div id="app"></div>
+    <script type="module" src="../src/index.js"></script>
 </body>
 </html>
+
 
 
