--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="app"></div>
-    <script type="module" src="../src/index.js"></script>
+    <script src="/bundle.js"></script>
 </body>
 </html>
 
