--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <!-- Parcel will inject the necessary script tags automatically -->
 </body>
 </html>
 
