--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parcel App</title>
+    <link href="./index.8a768e8c.css" rel="stylesheet">
 </head>
 <body>
     <div id="app"></div>
-    <!-- Parcel will inject the necessary script tags automatically -->
+    <script src="./index.168a63c1.js" type="module"></script>
 </body>
 </html>
 
