--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parcel App</title>
-    <link href="./index.8a768e8c.css" rel="stylesheet">
+    <!-- CSS file references will be handled dynamically by Parcel -->
 </head>
 <body>
     <div id="app"></div>
-    <script src="./index.168a63c1.js" type="module"></script>
+    <!-- JS file references will be handled dynamically by Parcel -->
+    <script src="./src/index.js" type="module"></script>
 </body>
 </html>
+
 
 
 
