--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parcel App</title>
-    <!-- CSS file references will be handled dynamically by Parcel -->
+    <link href="./index.css" rel="stylesheet">
 </head>
 <body>
     <div id="app"></div>
-    <!-- JS file references will be handled dynamically by Parcel -->
-    <script src="./src/index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
+
 
 
 
