--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parcel App</title>
-    <link href="./index.css" rel="stylesheet">
+    <link href="../src/style.css" rel="stylesheet">
 </head>
 <body>
     <div id="app"></div>
-    <script src="./index.js" type="module"></script>
+    <script src="../src/index.js" type="module"></script>
 </body>
 </html>
 
